# handoff

./: README.md  pyproject.toml
src/handoff/: __main__.py
