[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handoff"
version = "0.1.0"
description = "claude <-> codex session handoff tool"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
handoff = "handoff.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/handoff"]
